--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,8 @@
     "pino": "^8.11.0",
     "pino-pretty": "^7.1.0",
     "pretty-print": "^2.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -51,6 +53,8 @@
     "@types/node": "^18.15.11",
     "@types/pino": "^7.0.5",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "jest": "^29.5.0",
     "pre-commit": "^1.2.2",
     "rimraf": "^5.0.1",
